<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <include
        layout="@layout/appbar"/>

    <TextView
        android:id="@+id/profileHeader"
        android:text="@string/profile_title"
        style="@style/BlueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        style="@style/Divider"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@id/profileHeader"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/goalWeightLbl"
        android:text="@string/goal_weight_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/profileHeader"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/goalWeight"
        android:text="@string/decimal_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="150dp"
        app:layout_constraintTop_toBottomOf="@id/profileHeader"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/editGoalBtn"
        android:text="@string/edit_goal_btn_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:textColor="@color/black"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/profileHeader"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/enableSmsLbl"
        android:text="@string/enable_sms_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/goalWeightLbl"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ToggleButton
        android:id="@+id/enableSmsToggleButton"
        android:background="@color/blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/editGoalBtn"
        app:layout_constraintRight_toRightOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>