<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddWeightActivity">

    <include
        layout="@layout/appbar"/>

    <TextView
        android:id="@+id/goalHeader"
        android:text="@string/add_weight_title"
        style="@style/BlueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        style="@style/Divider"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@id/goalHeader"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:gravity="center"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/goalHeader" />

    <EditText
        android:id="@+id/newWeightDecimal"
        android:hint="@string/decimal_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:textSize="30sp"
        android:inputType="numberDecimal"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/datePicker"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/submitWeightBtn"
        android:text="@string/submit_btn_label"
        android:backgroundTint="@color/blue"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="90dp"
        app:layout_constraintTop_toBottomOf="@id/newWeightDecimal"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/deleteWeightBtn"
        android:text="@string/delete_btn_label"
        android:backgroundTint="@color/blue"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="90dp"
        app:layout_constraintTop_toBottomOf="@id/newWeightDecimal"
        app:layout_constraintLeft_toLeftOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>